[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Confused Engineer"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google_maps = "3.4.2"
tokio = { version = "1.36.0", features = ["full"] }
rand = "0.8.5"
axum = "0.7.4"
tower = "0.4.13"
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
rust-ini = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
basic-auth = {path = "./basic-auth"}